[package]
name = "librconsole"
version = "0.2.0"
authors = ["Tobias de Bruijn <github@thedutchmc.nl>"]
edition = "2018"

[lib]
name = "librconsole"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
jni = "0.19.0"
rand = "0.8.3"
lazy_static = "1.4.0"
flurry = "0.3.1"
rusqlite = { version = "0.25.0", features = ["bundled"]}
bcrypt = "0.9.0"
sha2 = "0.9.3"
base64 = "0.13.0"
chrono = "0.4.19"
